# dataplane

./: .envrc  .gitignore  .markdownlint.json  Cargo.toml  Dockerfile  README.md  clippy.toml  codebook.toml  codecov.yml  default.nix  deny.toml  flake.nix  justfile  shell.nix  testing.md
args/: Cargo.toml
args/src/: lib.rs
cli/: Cargo.toml
cli/src/: argsparse.rs  cliproto.rs  cmdtree.rs  cmdtree_dp.rs  completions.rs  lib.rs  terminal.rs
concurrency/: Cargo.toml
concurrency/src/: lib.rs  macros.rs
config/: Cargo.toml
config/src/: display.rs  errors.rs  gwconfig.rs  lib.rs
config/src/converters/: mod.rs
config/src/internal/: mod.rs
config/src/utils/: collapse.rs  mod.rs
dataplane/: Cargo.toml
dataplane/src/: args.rs  config.rs  main.rs  nat.rs  packet.rs  packet_hash.rs  packet_meta.rs  pipeline.rs  pipeline_old.rs
dataplane/src/drivers/: dpdk.rs  kernel.rs  mod.rs  tokio_util.rs
dataplane/src/nat/: fabric.rs  iplist.rs  mod.rs  prefixtrie.rs  stateless.rs  static_nat.rs
dataplane/src/packet_processor/: egress.rs  ingress.rs  ipforward.rs  mod.rs
dataplane/src/pipeline/: dyn_nf.rs  mod.rs  pipeline.rs  sample_nfs.rs  static_nf.rs  test_utils.rs
dataplane/src/statistics/: global_counters.rs  mod.rs
dpdk/: Cargo.toml  build.rs
dpdk-sys/: Cargo.toml  build.rs
dpdk-sys/c/: dpdk.h  wrapper.c  wrapper.h
dpdk-sys/gen-sysroot/: Dockerfile  default.nix  gen-sysroot.sh
dpdk-sys/src/: lib.rs
dpdk/src/: dev.rs  eal.rs  lcore.rs  lib.rs  mem.rs  socket.rs
dpdk/src/flow/: mod.rs
dpdk/src/queue/: hairpin.rs  mod.rs  rx.rs  tx.rs
dpdk/src/ring/: mod.rs
flow-info/: Cargo.toml
flow-info/src/: flow_info.rs  flow_info_item.rs  lib.rs
hardware/: Cargo.toml  README.md
hardware/src/: lib.rs  scan.rs  support.rs
hardware/src/group/: README.md  mod.rs
hardware/src/mem/: README.md  cache.rs  mod.rs  numa.rs  page.rs
hardware/src/nic/: mod.rs
hardware/src/os/: README.md  mod.rs
hardware/src/pci/: README.md  address.rs  bridge.rs  bus.rs  device.rs  domain.rs  function.rs  mod.rs  vendor.rs
id/: Cargo.toml
id/src/: lib.rs
init/: Cargo.toml  README.md
init/src/: main.rs  nic.rs  sysfs.rs
interface-manager/: Cargo.toml
interface-manager/src/: lib.rs  netns.rs
interface-manager/src/interface/: association.rs  mod.rs  netdevsim.rs  pci.rs  properties.rs  tap.rs  vrf.rs  vtep.rs
interface-manager/src/tc/: README.md  block.rs  chain.rs  mod.rs  qdisc.rs
lpm/: Cargo.toml
lpm/src/: lib.rs  prefix.rs  trie.rs
lpm/src/prefix/: ip.rs  mod.rs
lpm/src/trie/: mod.rs  prefix_map_impl.rs  trie_with_default.rs
mgmt/: Cargo.toml
mgmt/src/: lib.rs
mgmt/src/config/: mod.rs
mgmt/src/frr/: mod.rs
mgmt/src/grpc/: converter.rs  mod.rs  server.rs  test.rs
mgmt/src/models/: mod.rs
mgmt/src/processor/: confbuild.rs  display.rs  gwconfigdb.rs  launch.rs  mod.rs  namegen.rs  proc.rs  tests.rs
mgmt/src/rpc/: mod.rs
mgmt/src/tests/: mgmt.rs  mod.rs  nat.rs
mgmt/src/vpc_manager/: mod.rs
mgmt/tests/: reconcile.rs
nat/: Cargo.toml
nat/src/: icmp_error_msg.rs  iplist.rs  lib.rs  port.rs  stateless.rs
nat/src/stateful/: allocator.rs  allocator_writer.rs  mod.rs  natip.rs  port.rs  sessions.rs  test.rs
nat/src/stateless/: iplist.rs  mod.rs  natrw.rs  test.rs
net/: Cargo.toml  build.rs
net/artifacts/: ahash_fingerprint.txt
net/benches/: parse.rs
net/src/: addr_parse_error.rs  checksum.rs  headers.rs  lib.rs  packet.rs  parse.rs  vlan.rs  vxlan.rs
net/src/buffer/: mod.rs  test_buffer.rs
net/src/eth/: ethertype.rs  ethtype.rs  mac.rs  mod.rs
net/src/headers/: embedded.rs  mod.rs
net/src/icmp4/: checksum.rs  mod.rs  truncated.rs
net/src/icmp6/: checksum.rs  mod.rs  truncated.rs
net/src/icmp_any/: checksum.rs  mod.rs  truncated.rs
net/src/interface/: bridge.rs  display.rs  mod.rs  mtu.rs  vrf.rs  vtep.rs
net/src/ip/: mod.rs
net/src/ip_auth/: mod.rs
net/src/ipv4/: addr.rs  checksum.rs  dscp.rs  ecn.rs  frag_offset.rs  mod.rs
net/src/ipv6/: addr.rs  flow_label.rs  mod.rs
net/src/packet/: display.rs  hash.rs  meta.rs  mod.rs  test_utils.rs  utils.rs
net/src/pci/: mod.rs
net/src/route/: mod.rs  table.rs
net/src/tcp/: checksum.rs  mod.rs  port.rs  truncated.rs
net/src/udp/: checksum.rs  mod.rs  port.rs  truncated.rs
net/src/vlan/: mod.rs
net/src/vxlan/: encap.rs  mod.rs  vni.rs
pipeline/: Cargo.toml
pipeline/src/: dyn_nf.rs  lib.rs  pipeline.rs  sample_nfs.rs  static_nf.rs  test_utils.rs
pkt-meta/: Cargo.toml
pkt-meta/src/: lib.rs
pkt-meta/src/dst_vni_lookup/: mod.rs  setup.rs
pkt-meta/src/dst_vpcd_lookup/: mod.rs  setup.rs
pkt-meta/src/flow_table/: README.md  atomic_instant.rs  display.rs  flow_info.rs  flow_key.rs  mod.rs  nf_expirations.rs  nf_lookup.rs  table.rs  thread_local_pq.rs
routing/: Cargo.toml
routing/src/: adjacency.rs  cli.rs  cpi.rs  cpi_process.rs  ctl.rs  display.rs  encapsulation.rs  errors.rs  event.rs  fib.rs  frrmi.rs  interface.rs  lib.rs  nexthop.rs  prefix.rs  pretty_utils.rs  revent.rs  rio.rs  rmac.rs  route_processor.rs  router.rs  routingdb.rs  rpc_adapt.rs  testfib.rs  vrf.rs
routing/src/atable/: adjacency.rs  atablerw.rs  mod.rs  resolver.rs
routing/src/config/: interface.rs  mod.rs  vrf.rs  vtep.rs
routing/src/evpn/: mod.rs  rmac.rs  vtep.rs
routing/src/fib/: fibgroupstore.rs  fibobjects.rs  fibtable.rs  fibtype.rs  mod.rs  test.rs
routing/src/frr/: frrmi.rs  mod.rs  test.rs
routing/src/interfaces/: iftable.rs  iftablerw.rs  interface.rs  mod.rs
routing/src/rib/: encapsulation.rs  mod.rs  nexthop.rs  rib2fib.rs  vrf.rs  vrftable.rs
scratch/: Cargo.toml  build.rs
scratch/src/: main.rs
stats/: Cargo.toml
stats/src/: dpstats.rs  lib.rs  rate.rs  register.rs  spec.rs  vpc.rs  vpc_stats.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tracectl/: Cargo.toml  README.md
tracectl/src/: control.rs  display.rs  lib.rs  targets.rs
vpc-manager/: Cargo.toml
vpc-manager/src/: lib.rs
vpc-manager/tests/: reconcile.rs
vpcmap/: Cargo.toml
vpcmap/src/: lib.rs  map.rs  map_test.rs  pairmap.rs  pairmap_test.rs
(+263 files in other folders)
