[workspace]

members = [ "cli",
	"dataplane",
	"dpdk",
	"dpdk-sys",
	"dpdk-sysroot-helper",
	"errno",
	"id",
	"interface-manager",
	"mgmt",
	"net",
	"pipeline",
	"rekon",
	"routing",
	"test-utils",
]

default-members = [
	"cli",
	"dataplane",
	"dpdk-sysroot-helper",
	"errno",
	"id",
	"interface-manager",
	"mgmt",
	"net",
	"pipeline",
	"rekon",
	"routing",
	"test-utils",
]

resolver = "3"

[workspace.dependencies]

# Internal
cli = { path = "./cli", package = "dataplane-cli", features = [] }
dpdk = { path = "./dpdk", package = "dataplane-dpdk" }
dpdk-sys = { path = "./dpdk-sys", package = "dataplane-dpdk-sys" }
dpdk-sysroot-helper = { path = "./dpdk-sysroot-helper", package = "dataplane-dpdk-sysroot-helper" }
dplane-rpc = { git = "https://github.com/githedgehog/dplane-rpc.git", version = "1.0.1" }
errno = { path = "./errno", package = "dataplane-errno" }
gateway_config = { git = "https://github.com/githedgehog/gateway-proto", tag="v0.9.0", version = "0.9.0" }
id = { path = "./id", package = "dataplane-id" }
interface-manager = { path = "./interface-manager", package = "dataplane-interface-manager" }
mgmt = { path = "./mgmt", package = "dataplane-mgmt"}
net = { path = "./net", package = "dataplane-net", features = ["test_buffer"] }
pipeline = { path = "./pipeline", package = "dataplane-pipeline" }
rekon = { path = "./rekon", package = "dataplane-rekon" }
routing = { path = "./routing", package = "dataplane-routing" }
test-utils = { path = "./test-utils", package = "dataplane-test-utils" }

# External
afpacket = { version = "0.2.3", default-features = false, features = [] }
ahash = { git = "https://github.com/githedgehog/aHash", branch = "pr/daniel-noland/bump-zero-copy", default-features = false, features = ["no-rng"] }
arbitrary = { version = "1.4.1", default-features = false, features = [] }
arc-swap = { version = "1.7.1", default-features = false, features = [] }
arrayvec = { version = "0.7.6", default-features = false, features = [] }
async-trait = { version = "0.1" }
bindgen = { version = "0.72.0", default-features = false, features = [] }
bolero = { version = "0.13.3", default-features = false, features = [] }
bytes = { version = "1.10.1", default-features = false, features = [] }
caps = { version = "0.5.5", default-features = false, features = [] }
clap = { version = "4.5.40", default-features = true, features = [] }
ctrlc = { version = "3.4.7", default-features = false, features = [] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
derive_builder = { version = "0.20.2", default-features = false, features = ["default", "std"] }
doxygen-bindgen = { version = "0.1.3", default-features = false, features = [] }
dyn-iter = { version = "1.0.1", default-features = false, features = [] }
etherparse = { version = "0.18.0", default-features = false, features = [] }
fixin = { git = "https://github.com/githedgehog/fixin", branch = "main" }
futures = { version = "0.3.31", default-features = false, features = [] }
ipnet = { version = "2.11.0", default-features = false, features = [] }
iptrie = { version = "0.10.3", default-features = false, features = [] }
left-right = { version = "0.11.5" }
linux-raw-sys = { version = "0.9.4", default-features = false, features = [] }
mac_address= { version = "1.1.8", default-features = false, features = [] }
mio = { version = "1.0.4", default-features = false, features = [] }
multi_index_map = { version = "0.15.0", default-features = false, features = [] }
netdev = { version = "0.35.2", default-features = false, features = [] }
nix = { version = "0.30.1", default-features = false, features = ["socket"] }
ordermap = { version = "0.5.7", default-features = false, features = [] }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
procfs = { version = "0.17.0", default-features = false, features = [] }
rtnetlink = { version = "0.17.0", default-features = false, features = [] }
rustyline = { version = "16.0.0", default-features = false, features = [] }
serde = { version = "1.0.219", default-features = false, features = [] }
serde_yml = { version = "0.0.12", default-features = false, features = [] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { version = "2.0.12", default-features = false, features = [] }
tokio = { version = "1.45.1", default-features = false, features = [] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tonic = { version = "0.13", default-features = false, features = ["transport", "codegen"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] } # attribute feature is so commonly used that we should just leave it on globally
tracing-subscriber = { version = "0.3.19", default-features = false, features = [] }
tracing-test = { version = "0.2.5", default-features = false, features = [] }
uuid = { version = "1.17.0", default-features = false, features = [] }

[profile.dev]
panic = "unwind"
debug-assertions = true
overflow-checks = true
debug = "full"
rpath = true

[profile.release]
opt-level = 3
panic = "unwind"
debug = "full"
lto = "thin"
debug-assertions = false
overflow-checks = false
codegen-units = 1
rpath = true

[profile.fuzz]
inherits = "release"
debug-assertions = true
overflow-checks = true
