[workspace]

members = [
	"cli",
	"config",
	"dataplane",
	"dpdk",
	"dpdk-sys",
	"dpdk-sysroot-helper",
	"errno",
	"id",
	"interface-manager",
	"mgmt",
	"nat",
	"net",
	"pipeline",
	"pkt-meta",
	"rekon",
	"routing", "stats",
	"test-utils",
	"vpcmap",
]

resolver = "3"

[workspace.dependencies]

# Internal
cli = { path = "./cli", package = "dataplane-cli", features = [] }
config = { path = "./config", package = "dataplane-config" }
dpdk = { path = "./dpdk", package = "dataplane-dpdk" }
dpdk-sys = { path = "./dpdk-sys", package = "dataplane-dpdk-sys" }
dpdk-sysroot-helper = { path = "./dpdk-sysroot-helper", package = "dataplane-dpdk-sysroot-helper" }
dplane-rpc = { git = "https://github.com/githedgehog/dplane-rpc.git", version = "1.1.2"}
errno = { path = "./errno", package = "dataplane-errno" }
gateway_config = { git = "https://github.com/githedgehog/gateway-proto", tag = "v0.12.0", version = "0.12.0" }
id = { path = "./id", package = "dataplane-id" }
interface-manager = { path = "./interface-manager", package = "dataplane-interface-manager" }
lpm = { path = "./lpm", package = "dataplane-lpm" }
mgmt = { path = "./mgmt", package = "dataplane-mgmt" }
nat = { path = "./nat", package = "dataplane-nat" }
net = { path = "./net", package = "dataplane-net", features = ["test_buffer"] }
pipeline = { path = "./pipeline", package = "dataplane-pipeline" }
pkt-meta = { path = "./pkt-meta", package = "dataplane-pkt-meta" }
rekon = { path = "./rekon", package = "dataplane-rekon" }
routing = { path = "./routing", package = "dataplane-routing" }
stats = { path = "./stats", package = "dataplane-stats" }
test-utils = { path = "./test-utils", package = "dataplane-test-utils" }
vpcmap = { path = "./vpcmap", package = "dataplane-vpcmap" }

# External
afpacket = { version = "0.2.3", default-features = false, features = [] }
ahash = { git = "https://github.com/githedgehog/aHash", branch = "pr/daniel-noland/bump-zero-copy", default-features = false, features = ["no-rng"] }
arc-swap = { version = "1.7.1", default-features = false, features = [] }
arrayvec = { version = "0.7.6", default-features = false, features = [] }
async-trait = { version = "0.1.88", default-features = false, features = [] }
axum = { version = "0.8.4", default-features = false, features = ["http1", "json"] }
axum-server = { version = "0.7.2", default-features = false, features = [] }
bindgen = { version = "0.72.0", default-features = false, features = [] }
bitflags = { version = "2.9.1", default-features = false, features = [] }
bolero = { version = "0.13.4", default-features = false, features = [] }
bytes = { version = "1.10.1", default-features = false, features = [] }
caps = { version = "0.5.5", default-features = false, features = [] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.42", default-features = true, features = [] }
ctrlc = { version = "3.4.7", default-features = false, features = [] }
dashmap = { version = "6.1.0", default-features = false, features = [] }
derive_builder = { version = "0.20.2", default-features = false, features = ["default", "std"] }
doxygen-bindgen = { version = "0.1.3", default-features = false, features = [] }
dyn-iter = { version = "1.0.1", default-features = false, features = [] }
etherparse = { version = "0.18.2", default-features = false, features = [] }
fixin = { git = "https://github.com/githedgehog/fixin", branch = "main" }
futures = { version = "0.3.31", default-features = false, features = [] }
hyper = { version = "1.6.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1.16", features = ["tokio"]}
ipnet = { version = "2.11.0", default-features = false, features = [] }
left-right = { version = "0.11.5" }
libc = { version = "1.0.0-alpha.1", default-features = false, features = [] }
linux-raw-sys = { version = "0.10.0", default-features = false, features = [] }
mac_address = { version = "1.1.8", default-features = false, features = [] }
metrics = { version = "0.24.2", default-features = false, features = [] }
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
mio = { version = "1.0.4", default-features = false, features = [] }
multi_index_map = { version = "0.15.0", default-features = false, features = [] }
netdev = { version = "0.36.0", default-features = false, features = [] }
nix = { version = "0.30.1", default-features = false, features = ["socket"] }
num-traits = { version = "0.2.19", default-features = false, features = [] }
once_cell = { version = "1.21.3", default-features = false, features = [] }
ordermap = { version = "0.5.8", default-features = false, features = [] }
parking_lot = { version = "0.12.4", default-features = false, features = [] }
prefix-trie = { version = "0.8.1", default-features = false, features = [] }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
procfs = { version = "0.17.0", default-features = false, features = [] }
rtnetlink = { git = "https://github.com/githedgehog/rtnetlink.git", branch = "hh/tc-actions", default-features = false, features = [] }
rustyline = { version = "16.0.0", default-features = false, features = [] }
serde = { version = "1.0.219", default-features = false, features = [] }
serde_yml = { version = "0.0.12", default-features = false, features = [] }
static_assertions = { version = "1.1.0", default-features = false, features = [] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = { version = "2.0.12", default-features = false, features = [] }
tokio = { version = "1.47.0", default-features = false, features = [] }
tokio-stream = { version = "0.1.17", default-features = false, features = [] }
tonic = { version = "0.14.0", default-features = false, features = ["transport", "codegen"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [] }
tracing-test = { version = "0.2.5", default-features = false, features = [] }
uuid = { version = "1.17.0", default-features = false, features = [] }

[profile.dev]
panic = "unwind"
debug-assertions = true
overflow-checks = true
debug = "full"
rpath = true

[profile.release]
opt-level = 3
panic = "unwind"
debug = "full"
lto = "thin"
debug-assertions = false
overflow-checks = false
codegen-units = 1
rpath = true

[profile.fuzz]
inherits = "release"
debug-assertions = true
overflow-checks = true
