[package]
name = "dataplane-args"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["std", "derive", "usage"] }
mgmt = { workspace = true  }
rkyv = { workspace = true, features = ["alloc", "bytecheck"] }
routing = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# internal
net = { workspace = true, features = ["test_buffer"] }
routing = { workspace = true, features = ["testing"] }

# external
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
