[package]
name = "cli"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
colored = "3.0.0"
bincode2 = "2.0.1"
enum_primitive = "0.1.1"
log = { version = "^0.4.25", features = ["serde"]}
rustyline = { version = "8.0.0", features = ["with-fuzzy"] }
serde = {workspace = true, features = ["derive", "serde_derive"]}
smallvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[features]
cli = []

