[package]
name = "dataplane-concurrency"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
loom = ["dep:loom"]
shuttle = ["dep:shuttle"]

[dependencies]
loom = { workspace = true, optional = true, features = [] }
shuttle = { workspace = true, optional = true, features = [] }
