[package]
name = "dataplane-concurrency"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
loom = ["dep:loom", "concurrency-macros/loom"]
shuttle = ["dep:shuttle", "concurrency-macros/shuttle"]
silence_clippy = ["concurrency-macros/silence_clippy"] # Do not manually enable this feature, let --all-features do it for you

[dependencies]
loom = { workspace = true, optional = true, features = [] }
shuttle = { workspace = true, optional = true, features = [] }
concurrency-macros = { workspace = true, features = [] }
