[package]
name = "dataplane"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]

clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true, features = ["termination"] }
net = { workspace = true, features = ["serde"] }
dpdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }

[dev-dependencies]
tracing-test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
