[package]
name = "dataplane"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
afpacket = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "usage"] }
ctrlc = { workspace = true, features = ["termination"] }
dpdk = { workspace = true }
id = { workspace = true }
iptrie = { workspace = true }
default-net = { workspace = true }
dyn-iter = { workspace = true }
mio = { workspace = true, features = ["os-ext", "net"] }
net = { workspace = true, features = ["test_buffer"] }
ordermap = { workspace = true, features = ["std"] }
pipeline = { workspace = true }
routing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }

[dev-dependencies]
net = { workspace = true, features = ["test_buffer"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(none)'] }
