[package]
name = "dpdk-sys"
version = "0.0.1"
edition = "2024"
description = "Low-level bindings to the Data Plane Development Kit (DPDK)"
publish = false
license = "Apache-2.0"

[lib]
doctest = false
doc = false

[build-dependencies]
bindgen = { workspace = true, features = ["runtime", "experimental"]}
doxygen-rs = { workspace = true }
dpdk-sysroot-helper = { workspace = true }
