[package]
name = "dpdk"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]

dpdk-sys = { path = "../dpdk-sys" }
errno = { path = "../errno" }
net = { path = "../net" }

etherparse = { workspace = true, default-features = false, features = [] }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
dpdk-sysroot-helper = { path = "../dpdk-sysroot-helper" }
