[package]
name = "dpdk"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]

dpdk-sys = { workspace = true }
errno = { workspace = true }
net = { workspace = true }

serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }
