[package]
name = "dataplane-dpdk"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]

dpdk-sys = { workspace = true }
errno = { workspace = true }
net = { workspace = true }

serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
dpdk-sysroot-helper = { workspace = true }
