[package]
name = "dataplane-flow-info"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
std = []
testing = []

[dependencies]
atomic-instant-full = { workspace = true }
concurrency = { workspace = true }
downcast-rs = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
