[package]
name = "dataplane-interface-manager"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = ["bolero"]
bolero = ["dep:bolero", "net/bolero"]

[dependencies]
# internal
net = { workspace = true }
rekon = { workspace = true }

# external
bolero = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
multi_index_map = { workspace = true, features = ["serde"] }
nix = { workspace = true, features = ["sched"] }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
# internal
net = { workspace = true, features = ["bolero"] }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time", "test-util"] }

