[package]
name = "dataplane-interface-manager"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = []
bolero = ["dep:bolero", "net/bolero"]

[dependencies]
# internal
net = { workspace = true }
rekon = { workspace = true }

# external
bolero = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
derive_builder = { workspace = true, default-features = false, features = ["default"] }
futures = { workspace = true, features = ["default"] }
libc = { workspace = true, features = [] }
multi_index_map = { workspace = true, features = ["serde"] }
nix = { workspace = true, default-features = false, features = ["ioctl"] }
rtnetlink = { workspace = true, features = ["default", "tokio"] }
serde = { workspace = true, features = ["std"] }
static_assertions = { workspace = true, features = [] }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, default-features = false, features = ["fs", "io-util"] }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
# internal
net = { workspace = true, features = ["bolero"] }

# external
bolero = { workspace = true, default-features = false, features = ["alloc"] }

