[package]
name = "dataplane-lpm"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
testing = ["dep:bolero"]

[dependencies]
bolero = { workspace = true, optional = true }
ipnet = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
prefix-trie = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, default-features = false }
serde_yml = { workspace = true }

