[package]
name = "dataplane-mgmt"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
gateway_config = { workspace = true }
multi_index_map = { workspace = true }
net = { workspace = true }
routing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }

[dev-dependencies]
routing = { workspace = true, features = ["testing"] }

